# Locale-Owkin-Hackathon

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  PREREGISTRATION_survival.md  README.md  pyproject.toml  requirements-web.txt  requirements.txt
data/: mock.h5ad
demo/: findings.json  transcript.md
docs/: vision.md
reports/: niche7_phenotype.md  pvalue_reconciliation.md  risk_model_card.json
scripts/: build_basel.py  build_dashboard.py  build_lab_data.py  build_real_sample.py  build_viz_bundle.py  download_data.py  extract_coords.py  fetch_assets.py  load_mosaic.py  make_figures.py  make_mock.py  precompute_findings.py  run_basel_groundtruth.py  run_basel_niches.py  run_basel_risk.py  run_basel_survival.py  serve.py
src/locale/data/: __init__.py
src/locale/engine/: __init__.py  characterize.py  enrichment.py  graph.py  niches.py  outcome.py  validate.py
src/locale/mcp_server/: README.md  __init__.py  interpret.py  server.py  tools.py
src/locale/viz/app/: hero3d.html  index.html  viz_bundle.js
src/localespatial/: __init__.py  metaclusters.py  schema.py  webanalyze.py
src/localespatial/data/: build_anndata.py
src/localespatial/engine/: __init__.py  enrichment.py  graph.py  groundtruth.py  outcome.py  risk.py  validate.py
src/localespatial/mcp_server/: interpret.py  server.py  tools.py
src/localespatial/viz/: __init__.py  payload.py
src/localespatial/viz/app/: dashboard.html  dashboard_data.js  index.html  lab.html  lab_data.js  (+1 more)
tests/: test_engine.py  test_integration.py  test_mcp_server.py  test_risk.py  test_schema.py  test_tools.py
(+3 files in other folders)
